Mejora en la autenticación

--- a/GenesisFEPortalWeb.ApiService/appsettings.json
+++ b/GenesisFEPortalWeb.ApiService/appsettings.json
@@ -24,5 +24,11 @@
     "DefaultExpiration": "00:30:00",
     "CatalogExpiration": "24:00:00",
     "EnableCaching": true
-  }
+  },
+  "Resend": {
+    "ApiKey": "re_tu_api_key_de_resend",
+    "FromEmail": "tu-email-verificado@tudominio.com",
+    "FromName": "GenesisFE Portal"
+  },
+  "ApplicationUrl": "https://localhost:7214"
 }
