--- a/GenesisFEPortalWeb.BL/GenesisFEPortalWeb.BL.csproj
+++ b/GenesisFEPortalWeb.BL/GenesisFEPortalWeb.BL.csproj
@@ -9,6 +9,7 @@
 		<PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
 		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
 		<PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="9.0.2" />
+		<PackageReference Include="Resend" Version="0.0.13" />
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.4.0" />
 	</ItemGroup>
 	<ItemGroup>
